# pagerduty-rota-notifier

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  container-release.yml  container-scan.yml  container-test.yml  dependency-review.yml  openssf-scorecard.yml  pagerduty-rota-notifier.yml  pre-commit-update.yml  super-linter.yml  test.yml  zizmor.yml
contrib/: slack-app-manifest.json
test/: container-structure-test.yml
