[project]
name = "pagerduty-rota-notifier"
version = "1.0.1"
description = "PagerDuty Rota Notifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pagerduty==5.0.0",
    "slack-sdk==3.36.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "ruff==0.14.0",
    "zizmor==1.14.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
