[project]
name = "pagerduty-rota-notifier"
version = "1.0.1"
description = "PagerDuty Rota Notifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pagerduty==5.0.0",
    "slack-sdk==3.37.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "pytest==9.0.0",
    "ruff==0.14.3",
    "zizmor==1.16.3",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
