[project]
name = "pagerduty-rota-notifier"
version = "1.0.1"
description = "PagerDuty Rota Notifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pagerduty==6.1.0",
    "slack-sdk==3.39.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.1",
    "zizmor==1.22.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
